demo/map.css
.adc-map label:hover {
    cursor: pointer;
}
.adc-map .wrapper {
    position:relative;
    /*overflow:hidden;*/
}
.adc-map .container {
    top:0;
    left:0;
    position:absolute;
    z-index:10;
}
.adc-map text {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
.adc-map .mapAreaForm {
	display: none;
}

